fix(transverse) : #23194, fixed shifting in transverse search inputs

--- a/modules/_lightboxes.scss
+++ b/modules/_lightboxes.scss
@@ -129,4 +129,15 @@ section.lightbox{
 			}
 		}
 	}
+	.search-pagination{
+		input{
+			padding-right: 45px!important;
+			padding-left: 45px!important;
+			margin: 0!important;
+			box-sizing: border-box;
+		}
+		.show-close{
+			position: absolute;
+		}
+	}
 }
