--- a/modules/_search-pagination.scss
+++ b/modules/_search-pagination.scss
@@ -1,13 +1,4 @@
 .search-pagination{
-    input{
-        padding-right: 45px!important;
-        padding-left: 45px!important;
-        margin: 0!important;
-        box-sizing: border-box;
-    }
-    .show-close{
-        position: absolute;
-    }
 
     //input + i[class*="search"]{
     input + i.search{
